Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 23:36+0200\n"
+"PO-Revision-Date: 2011-08-20 01:31+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12341,6 +12341,10 @@ msgid ""
 "wish to increase the in-memory table limit you will have to increase the "
 "other value as well."
 msgstr ""
+"Eğer kasıtlı olarak ikisinden birini değiştirirseniz: Sunucu bellek içi "
+"tabloların en fazla boyutunu belirlemek için her iki düşük değeri kullanır. "
+"Bu yüzden eğer bellek içi tablo sınırını arttırmak isterseniz, diğer değeri "
+"de arttırmak zorunda kalacaksınız."
 
 #: po/advisory_rules.php:143
 #, php-format
