--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 21:45+0200\n"
+"PO-Revision-Date: 2011-08-20 06:39+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12782,10 +12782,9 @@ msgid "Rate of open files"
 msgstr "Tasa de apertura de archivos"
 
 #: po/advisory_rules.php:186
-#, fuzzy
 #| msgid "The number of pending log file fsyncs."
 msgid "The rate of opening files is high."
-msgstr "El número de fsyncs pendientes al archivo de registro."
+msgstr "La tasa de apertura de archivos es alta."
 
 #: po/advisory_rules.php:188
 #, php-format
