--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 06:49+0200\n"
+"PO-Revision-Date: 2011-08-20 06:50+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12816,7 +12816,7 @@ msgstr "Bloqueos de tabla inmediatos: %s%%, este valor debería ser mayor a 95%%
 
 #: po/advisory_rules.php:195
 msgid "Table lock wait rate"
-msgstr ""
+msgstr "Tasa de espera para bloqueos de tablas"
 
 #: po/advisory_rules.php:198
 #, php-format
