--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 06:50+0200\n"
+"PO-Revision-Date: 2011-08-20 06:51+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12835,6 +12835,8 @@ msgid ""
 "Thread cache is disabled, resulting in more overhead from new connections to "
 "MySQL."
 msgstr ""
+"El caché de hilos está desactivado, esto resulta en mayor sobrecarga en las "
+"nuevas conexiones a MySQL."
 
 #: po/advisory_rules.php:202
 msgid "Enable the thread cache by setting {thread_cache_size} > 0."
