--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 06:51+0200\n"
+"PO-Revision-Date: 2011-08-20 06:52+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12846,7 +12846,7 @@ msgstr ""
 
 #: po/advisory_rules.php:203
 msgid "The thread cache is set to 0"
-msgstr ""
+msgstr "El caché de hilos está configurado a 0"
 
 #: po/advisory_rules.php:205
 #, fuzzy, php-format
