--- a/po/es.po
+++ b/po/es.po
@@ -12855,10 +12855,9 @@ msgid "Thread cache hit rate %%"
 msgstr "Porcentaje de efectividad del caché de hilos"
 
 #: po/advisory_rules.php:206
-#, fuzzy
 #| msgid "Tracking is not active."
 msgid "Thread cache is not efficient."
-msgstr "El seguimiento no está activo."
+msgstr "El caché de hilos no es eficiente."
 
 #: po/advisory_rules.php:207
 msgid "Increase {thread_cache_size}."
