--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 06:52+0200\n"
+"PO-Revision-Date: 2011-08-20 06:53+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12861,7 +12861,7 @@ msgstr "El caché de hilos no es eficiente."
 
 #: po/advisory_rules.php:207
 msgid "Increase {thread_cache_size}."
-msgstr ""
+msgstr "Aumente «thread_cache_size»."
 
 #: po/advisory_rules.php:208
 #, php-format
