--- a/po/es.po
+++ b/po/es.po
@@ -12867,6 +12867,8 @@ msgstr "Aumente «thread_cache_size»."
 #, php-format
 msgid "Thread cache hitrate: %s%%, this value should be above 80%%"
 msgstr ""
+"Tasa de efectividad del caché de hilos: %s%%, este valor debería ser mayor a "
+"80%%"
 
 #: po/advisory_rules.php:210
 msgid "Threads that are slow to launch"
