--- a/po/es.po
+++ b/po/es.po
@@ -12872,7 +12872,7 @@ msgstr ""
 
 #: po/advisory_rules.php:210
 msgid "Threads that are slow to launch"
-msgstr ""
+msgstr "Hilos que inician ejecución lentamente"
 
 #: po/advisory_rules.php:211
 #, fuzzy
