--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 06:53+0200\n"
+"PO-Revision-Date: 2011-08-20 06:54+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12875,10 +12875,9 @@ msgid "Threads that are slow to launch"
 msgstr "Hilos que inician ejecución lentamente"
 
 #: po/advisory_rules.php:211
-#, fuzzy
 #| msgid "The number of threads that are not sleeping."
 msgid "There are too many threads that are slow to launch."
-msgstr "El número de procesos que no están en reposo."
+msgstr "Hay demasiados hilos que inician ejecución lentamente."
 
 #: po/advisory_rules.php:212
 msgid ""
