--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 06:54+0200\n"
+"PO-Revision-Date: 2011-08-20 06:55+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12884,6 +12884,9 @@ msgid ""
 "This generally happens in case of general system overload as it is pretty "
 "simple operations. You might want to monitor your system load carefully."
 msgstr ""
+"Esto generalmente ocurre cuando el sistema en sí está sobrecargado ya que es "
+"una operación relativamente sencilla. Debería de monitorizar la carga sobre "
+"el sistema cuidadosamente."
 
 #: po/advisory_rules.php:213
 #, php-format
