--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 06:55+0200\n"
+"PO-Revision-Date: 2011-08-20 06:56+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12895,7 +12895,7 @@ msgstr "%s hilo(s) tardaron más de %s segundos en iniciar, debería de ser 0"
 
 #: po/advisory_rules.php:215
 msgid "Slow launch time"
-msgstr ""
+msgstr "Tiempo de inicio lento"
 
 #: po/advisory_rules.php:216
 msgid "Slow_launch_threads is above 2s"
