--- a/po/es.po
+++ b/po/es.po
@@ -12916,10 +12916,9 @@ msgid "slow_launch_time is set to %s"
 msgstr "«slow_launch_time» está configurado a %s"
 
 #: po/advisory_rules.php:220
-#, fuzzy
 #| msgid "Persistent connections"
 msgid "Percentage of used connections"
-msgstr "Conexiones persistentes"
+msgstr "Porcentaje de conexiones utilizadas"
 
 #: po/advisory_rules.php:221
 msgid ""
