Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 06:59+0200\n"
+"PO-Revision-Date: 2011-08-20 07:00+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12944,6 +12944,8 @@ msgstr ""
 msgid ""
 "Max_used_connections is at %s%% of max_connections, it should be below 80%%"
 msgstr ""
+"«max_used_connections» es %s%% de «max_connections», debería ser menor a 80%"
+"%"
 
 #: po/advisory_rules.php:225
 #, fuzzy
