--- a/po/es.po
+++ b/po/es.po
@@ -12954,7 +12954,7 @@ msgstr "Porcentaje de conexiones abandonadas"
 
 #: po/advisory_rules.php:226
 msgid "Too many connections are aborted."
-msgstr ""
+msgstr "Demasiadas conexiones son abandonadas."
 
 #: po/advisory_rules.php:227 po/advisory_rules.php:232
 msgid ""
