--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 07:03+0200\n"
+"PO-Revision-Date: 2011-08-20 07:04+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -13007,6 +13007,10 @@ msgid ""
 "MySQL properly. This can be due to network issues or code not closing a "
 "database handler properly. Check your network and code."
 msgstr ""
+"Los clientes son abandonados generalmente cuando no cierran sus conexiones "
+"MySQL apropiadamente. Esto puede ser debido a problemas de red o cuando el "
+"código no libera el manejador de la base de datos correctamente. Revise su "
+"conexión de red y código."
 
 #: po/advisory_rules.php:238
 #, php-format
