--- a/po/es.po
+++ b/po/es.po
@@ -13016,6 +13016,8 @@ msgstr ""
 #, php-format
 msgid "%s%% of all clients are aborted. This value should be below 2%%"
 msgstr ""
+"%s%% de todos los clientes son abandonados. Este valor debería ser menor a 2"
+"%%"
 
 #: po/advisory_rules.php:240
 #, fuzzy
