--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 07:04+0200\n"
+"PO-Revision-Date: 2011-08-20 07:05+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -13028,6 +13028,8 @@ msgstr "Tasa de clientes abandonados"
 #, php-format
 msgid "Aborted client rate is at %s, this value should be less than 1 per hour"
 msgstr ""
+"La tasa de clientes abandonados es %s, este valor debería ser menor a 1 por "
+"hora"
 
 #: po/advisory_rules.php:245
 msgid "Is InnoDB disabled?"
