--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 07:09+0200\n"
+"PO-Revision-Date: 2011-08-20 07:10+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -13042,7 +13042,7 @@ msgstr "No posee InnoDB activado."
 
 #: po/advisory_rules.php:247
 msgid "InnoDB is usually the better choice for table engines."
-msgstr ""
+msgstr "InnoDB es, usualmente, la mejor opción como motor para tablas."
 
 #: po/advisory_rules.php:248
 msgid "have_innodb is set to 'value'"
