--- a/po/es.po
+++ b/po/es.po
@@ -13045,8 +13045,9 @@ msgid "InnoDB is usually the better choice for table engines."
 msgstr "InnoDB es, usualmente, la mejor opción como motor para tablas."
 
 #: po/advisory_rules.php:248
+#, fuzzy
 msgid "have_innodb is set to 'value'"
-msgstr ""
+msgstr "«have_innodb» está configurado como 'value'"
 
 #: po/advisory_rules.php:250
 #, fuzzy
