Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 07:11+0200\n"
+"PO-Revision-Date: 2011-08-20 07:15+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -13077,6 +13077,17 @@ msgid ""
 "com/2007/01/increase-innodblogfilesize-proper-way.html\\\">this blog entry</"
 "a>"
 msgstr ""
+"Especialmente en un sistema con gran cantidad de escrituras a talbas InnoDB, "
+"debería de configurar «innodb_log_file_size» a aproximadamente 25%% de "
+"«innodb_buffer_pool_size». Sin embargo, mientras mayor sea este valor, mayor "
+"será el tiempo de recuperación luego de una caída de la base de datos, por "
+"lo que este valor no debería ser mayor a 256 MiB. Note, sin embargo, que no "
+"puede simplemente cambiar el valor de esta variable. Necesitará cerrar el "
+"servidor, eliminar los archivos de registro InnoDB, definir el nuevo valor "
+"en el archivo 'my.cnf' y luego revisar los mensajes de error para asegurarse "
+"que no hubo inconvenientens. Revise también <a "
+"href=\\\"http://mysqldatabaseadministration.blogspot.com/2007/01/increase-"
+"innodblogfilesize-proper-way.html\\\">este artículo</a>."
 
 #: po/advisory_rules.php:253
 #, php-format
