Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 08:03+0200\n"
+"PO-Revision-Date: 2011-08-20 08:04+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -10620,7 +10620,7 @@ msgstr "மீள்வாகு"
 
 #: tbl_operations.php:752
 msgid "Repair"
-msgstr ""
+msgstr "திருத்து"
 
 #: tbl_operations.php:764
 msgid "Remove partitioning"
