--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 08:06+0200\n"
+"PO-Revision-Date: 2011-08-20 08:07+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -10583,7 +10583,7 @@ msgstr ""
 
 #: tbl_operations.php:681
 msgid "Delete data or table"
-msgstr ""
+msgstr "தரவை அல்லது அட்டவணையை அழி"
 
 #: tbl_operations.php:696
 msgid "Empty the table (TRUNCATE)"
