--- a/po/ta.po
+++ b/po/ta.po
@@ -10587,7 +10587,7 @@ msgstr "தரவை அல்லது அட்டவணையை அழி"
 
 #: tbl_operations.php:696
 msgid "Empty the table (TRUNCATE)"
-msgstr ""
+msgstr "அட்டவணையை வெறுமையாக்கு (காலி)"
 
 #: tbl_operations.php:716
 msgid "Delete the table (DROP)"
