--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 08:07+0200\n"
+"PO-Revision-Date: 2011-08-20 08:08+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -10604,7 +10604,7 @@ msgstr "பிரிவினை %s"
 
 #: tbl_operations.php:748
 msgid "Analyze"
-msgstr ""
+msgstr "ஆரய்தல்"
 
 #: tbl_operations.php:749
 msgid "Check"
