--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 08:08+0200\n"
+"PO-Revision-Date: 2011-08-20 08:09+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -10570,7 +10570,7 @@ msgstr "அட்டவணை பராமரிப்பு"
 
 #: tbl_operations.php:618
 msgid "Defragment table"
-msgstr ""
+msgstr "அட்டவணையை ஒருங்கமை"
 
 #: tbl_operations.php:666
 #, php-format
