--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 08:09+0200\n"
+"PO-Revision-Date: 2011-08-20 08:10+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -10550,7 +10550,7 @@ msgstr ""
 
 #: tbl_operations.php:355
 msgid "Table options"
-msgstr ""
+msgstr "அட்டவணை தெரிவுகள்"
 
 #: tbl_operations.php:359
 msgid "Rename table to"
