Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 08:11+0200\n"
+"PO-Revision-Date: 2011-08-20 08:12+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -10486,7 +10486,7 @@ msgstr ""
 
 #: tbl_indexes.php:169
 msgid "Create a new index"
-msgstr "புதிய சுட்டியை உருவாக்கு"
+msgstr "புதிய சுட்யை உருவாக்கு"
 
 #: tbl_indexes.php:171
 msgid "Modify an index"
