--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 08:12+0200\n"
+"PO-Revision-Date: 2011-08-20 08:13+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -10438,7 +10438,7 @@ msgstr ""
 
 #: tbl_gis_visualization.php:128
 msgid "Width"
-msgstr ""
+msgstr "அகலம்"
 
 #: tbl_gis_visualization.php:132
 msgid "Height"
