--- a/po/ta.po
+++ b/po/ta.po
@@ -10408,7 +10408,7 @@ msgstr "X-அச்சு சிட்டை:"
 
 #: tbl_chart.php:133
 msgid "X Values"
-msgstr ""
+msgstr "X மதிப்புக்கள்"
 
 #: tbl_chart.php:134
 msgid "Y-Axis label:"
