--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 08:16+0200\n"
+"PO-Revision-Date: 2011-08-20 08:17+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -10412,7 +10412,7 @@ msgstr "X மதிப்புக்கள்"
 
 #: tbl_chart.php:134
 msgid "Y-Axis label:"
-msgstr ""
+msgstr "Y-அச்சு சிட்டை:"
 
 #: tbl_chart.php:134
 msgid "Y Values"
