--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 08:20+0200\n"
+"PO-Revision-Date: 2011-08-20 08:21+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -10112,7 +10112,7 @@ msgstr ""
 
 #: setup/lib/form_processing.lib.php:48
 msgid "Ignore errors"
-msgstr ""
+msgstr "வழுக்களை நிராகரி"
 
 #: setup/lib/form_processing.lib.php:50
 msgid "Show form"
