--- a/po/ta.po
+++ b/po/ta.po
@@ -10088,7 +10088,7 @@ msgstr ""
 
 #: setup/frames/index.inc.php:241
 msgid "Donate"
-msgstr ""
+msgstr "நன்கொடை"
 
 #: setup/frames/servers.inc.php:28
 msgid "Edit server"
