Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 08:24+0200\n"
+"PO-Revision-Date: 2011-08-20 08:25+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -10072,7 +10072,7 @@ msgstr ""
 
 #: setup/frames/index.inc.php:220
 msgid "End of line"
-msgstr ""
+msgstr "முடிவுக்கோடு"
 
 #: setup/frames/index.inc.php:225
 msgid "Display"
