--- a/po/ta.po
+++ b/po/ta.po
@@ -10040,7 +10040,7 @@ msgstr ""
 
 #: setup/frames/index.inc.php:101 setup/frames/menu.inc.php:15
 msgid "Overview"
-msgstr ""
+msgstr "இருதிப்பர்வை"
 
 #: setup/frames/index.inc.php:109
 msgid "Show hidden messages (#MSG_COUNT)"
