--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 08:28+0200\n"
+"PO-Revision-Date: 2011-08-20 08:29+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -10030,7 +10030,7 @@ msgstr ""
 
 #: setup/frames/index.inc.php:93
 msgid "Configuration saved."
-msgstr ""
+msgstr "உள்ளமைவு சேமிக்கப்பட்டது"
 
 #: setup/frames/index.inc.php:94
 msgid ""
