--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 08:29+0200\n"
+"PO-Revision-Date: 2011-08-20 08:30+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -9972,7 +9972,7 @@ msgstr "உள்ளமைவு: %s"
 
 #: server_synchronize.php:1236
 msgid "Socket"
-msgstr ""
+msgstr "பொருத்துவாய்"
 
 #: server_synchronize.php:1282
 msgid ""
