Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 08:29+0200\n"
+"PO-Revision-Date: 2011-08-20 08:32+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12401,6 +12401,13 @@ msgid ""
 "mentioned in in the <a href=\\\"http://dev.mysql.com/doc/refman/5.0/en/"
 "internal-temporary-tables.html\\\">MySQL Documentation</a>"
 msgstr ""
+"{max_heap_table_size} ve {tmp_table_size} arttırmak yardımcı olabilir. Ancak "
+"bazı geçici tablolar her zaman diske yazılır, bu değişkenlerin değeri "
+"bağımsızdır. <a href=\\\"http://dev.mysql.com/doc/refman/5.0/en/internal-"
+"temporary-tables.html\\\">MySQL Belgesi</a> içinde bahsedildiği gibi şu "
+"şartlardan (Geçici tablonun içerisinde: BLOB veya TEXT sütununun varlığı ya "
+"da 512 bayttan büyük sütunun varlığı) kaçınmak için bunları elemek "
+"bakımından sorgularınızı yeniden yazmak zorunda kalacaksınız"
 
 #: po/advisory_rules.php:153
 #, php-format
