--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 08:32+0200\n"
+"PO-Revision-Date: 2011-08-20 08:33+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -9990,7 +9990,7 @@ msgstr "சேவையக மாறிகள் மற்றும் அமை
 
 #: server_variables.php:111 server_variables.php:137
 msgid "Session value"
-msgstr ""
+msgstr "அமர்வு மதிப்பு"
 
 #: server_variables.php:111
 msgid "Global value"
