Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 08:32+0200\n"
+"PO-Revision-Date: 2011-08-20 08:34+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12374,8 +12374,8 @@ msgstr ""
 "{max_heap_table_size} ve {tmp_table_size} arttırmak yardımcı olabilir. Ancak "
 "bazı geçici tablolar herzaman diske yazılır, bu değişkenlerin değeri "
 "bağımsızdır. <a href=\\\"http://www.facebook.com/note.php?note_id=101501112550"
-"65841&comments\\\">Pythian Grubu Makalesi</a>'nde başlangıcında da bahsedilmiş "
-"olan şu şartlardan (Geçici tablonun içerisinde: BLOB veya TEXT sütununun "
+"65841&comments\\\">Pythian Grubu Makalesi</a>'nde başlangıcında bahsedildiği "
+"gibi şu şartlardan (Geçici tablonun içerisinde: BLOB veya TEXT sütununun "
 "varlığı ya da 512 bayttan büyük sütunun varlığı) kaçınmak için bunları "
 "elemek bakımından sorgularınızı yeniden yazmak zorunda kalacaksınız"
 
