--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 08:33+0200\n"
+"PO-Revision-Date: 2011-08-20 08:34+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -10026,7 +10026,7 @@ msgstr ""
 
 #: setup/frames/index.inc.php:65
 msgid "Insecure connection"
-msgstr ""
+msgstr "பாதுகாப்பற்ற இணைப்பு"
 
 #: setup/frames/index.inc.php:93
 msgid "Configuration saved."
