Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 08:34+0200\n"
+"PO-Revision-Date: 2011-08-20 08:35+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -9963,7 +9963,7 @@ msgstr ""
 
 #: server_synchronize.php:1192
 msgid "Current connection"
-msgstr ""
+msgstr "நடப்பாணை இணைப்பு"
 
 #: server_synchronize.php:1221
 #, php-format
