--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 08:36+0200\n"
+"PO-Revision-Date: 2011-08-20 08:37+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -9955,7 +9955,7 @@ msgstr ""
 
 #: server_synchronize.php:1038
 msgid "Executed queries"
-msgstr ""
+msgstr "வினவல்கள் நிறைவடைந்தது"
 
 #: server_synchronize.php:1184
 msgid "Enter manually"
