Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 15:37+0200\n"
+"PO-Revision-Date: 2011-08-20 15:40+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -13119,6 +13119,17 @@ msgid ""
 "\"http://mysqldatabaseadministration.blogspot.com/2007/01/increase-"
 "innodblogfilesize-proper-way.html\\\">this blog entry</a>"
 msgstr ""
+"Normalmente es suficiente definir «innodb_log_file_size» a el 25% del valor "
+"de «innodb_buffer_pool_size». Un valor muy alto de «innodb_log_file_size» "
+"reduce considerablemente la velocidad de la recuperación luego de una caída "
+"de la base de datos. Revise también <a "
+"href=\\\"http://www.mysqlperformanceblog.com/2006/07/03/choosing-proper-"
+"innodb_log_file_size/\\\">este artículo</a>. Necesitará cerrar el servidor, "
+"eliminar los archivos de registros InnoDB, definir el nuevo valor en el "
+"archivo 'my.cnf', iniciar el servidor y luego verificar los registros de "
+"error para asegurarse que no hubo inconvenientes. Revise también <a "
+"href=\\\"http://mysqldatabaseadministration.blogspot.com/2007/01/increase-"
+"innodblogfilesize-proper-way.html\\\">este artículo</a>."
 
 #: po/advisory_rules.php:258
 #, php-format
