--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 15:40+0200\n"
+"PO-Revision-Date: 2011-08-20 15:41+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -13134,7 +13134,7 @@ msgstr ""
 #: po/advisory_rules.php:258
 #, php-format
 msgid "Your absolute InnoD log size is %s MiB"
-msgstr ""
+msgstr "El tamaño del archivo de registros InnoDB es %s MiB"
 
 #: po/advisory_rules.php:260
 #, fuzzy
