--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 15:41+0200\n"
+"PO-Revision-Date: 2011-08-20 15:42+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -13061,7 +13061,7 @@ msgid ""
 "InnoDB buffer pool."
 msgstr ""
 "El tamaño del archivo de registro InnoDB no parece ser apropiado en relación "
-"al conjunto de búfers InnoDB."
+"a la reserva de búfers InnoDB."
 
 #: po/advisory_rules.php:252
 #, php-format
