Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 15:42+0200\n"
+"PO-Revision-Date: 2011-08-20 15:45+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -13159,6 +13159,17 @@ msgid ""
 "\"http://www.mysqlperformanceblog.com/2007/11/03/choosing-"
 "innodb_buffer_pool_size/\\\">this article</a>"
 msgstr ""
+"La reserva de búfers InnoDB tiene un profundo impacto en la performance de "
+"las tablas InnoDB. Asigne toda la memoria disponible a este búfer. Para "
+"servidores de base de datos que sólo utilicen InnoDB como motor de "
+"almacenamiento y no tengan otros servicios (por ejemplo un servidor web), "
+"puede definir este valor hasta un 80%% de su memoria disponible. Si no es el "
+"caso, deberá analizar cuidadosamente el consumo de memoria de los otros "
+"servicios y tablas con otros motores y configurar esta variable acorde a "
+"ello. Si se la define demasiado alta, su sistema comenzará a utilizar el "
+"área de intercambio en disco disminuyendo la performance significativamente. "
+"Revise también <a href=\\\"http://www.mysqlperformanceblog.com/2007/11/03"
+"/choosing-innodb_buffer_pool_size/\\\">este artículo</a>"
 
 #: po/advisory_rules.php:263
 #, php-format
