Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 15:45+0200\n"
+"PO-Revision-Date: 2011-08-20 15:50+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -13179,6 +13179,10 @@ msgid ""
 "perfectly adequate for your system if you don't have much InnoDB tables or "
 "other services running on the same machine."
 msgstr ""
+"Actualmente está utilizando %s%% de su memoria de la reserva de búfers "
+"InnoDB. Esta regla se dispara si está asignando menos del 60%%. Sin embargo, "
+"esto puede ser perfectamente adecuado para su sistema si no posee muchas "
+"tablas InnoDB o tiene otros servicios en el mismo equipo."
 
 #: po/advisory_rules.php:265
 #, fuzzy
