Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 15:50+0200\n"
+"PO-Revision-Date: 2011-08-20 15:51+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -13199,6 +13199,10 @@ msgid ""
 "writers for a given table. See also <a href=\\\"http://dev.mysql.com/doc/"
 "refman/5.0/en/concurrent-inserts.html\\\">MySQL Documentation</a>"
 msgstr ""
+"Definir «concurrent_insert» a 1 reduce la competencia entre lectores y "
+"escritores en una tabla particular. Revise también la <a "
+"href=\\\"http://dev.mysql.com/doc/refman/5.0/en/concurrent-"
+"inserts.html\\\">documentación MySQL</a>"
 
 #: po/advisory_rules.php:268
 msgid "concurrent_insert is set to 0"
