Translation update done using Pootle.

--- a/po/da.po
+++ b/po/da.po
@@ -896,7 +896,7 @@ msgstr "Linjestreng"
 
 #: gis_data_editor.php:221 gis_data_editor.php:275
 msgid "Outer Ring:"
-msgstr ""
+msgstr "Ydre ring:"
 
 #: gis_data_editor.php:223 gis_data_editor.php:277 js/messages.php:290
 msgid "Inner Ring"
